Bug 1344596 - Allow OSPreferences API without ENABLE_INTL_API. r=gandalf a=gchang

Since we have to keep --with-intl-api=no setting, we allow OSPrefrences API wiout ENABLE_INTL_API.

MozReview-Commit-ID: 8sQHW6iq9Ss